# TokenIndexer

./: .gitignore  Cargo.toml  README.md  brand.md  config.example.toml  config.toml
crates/indexer/: Cargo.toml
crates/indexer/migrations/: 001_create_tables.sql  002_add_indexing_fields.sql  003_add_transaction_fields.sql  004_add_performance_indexes.sql
crates/indexer/src/: lib.rs  main.rs
crates/indexer/src/api/: dispatcher.rs  mod.rs  websocket.rs
crates/indexer/src/config/: README.md  mod.rs  tests.rs
crates/indexer/src/database/: mod.rs
crates/indexer/src/indexers/: hunter.rs  mod.rs  scout.rs  shadow.rs
crates/indexer/src/metrics/: mod.rs
crates/indexer/src/models/: mod.rs
crates/indexer/src/queue/: mod.rs
crates/indexer/src/rpc/: mod.rs  parser.rs
crates/indexer/tests/: config_integration_test.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vercel.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: CopyButton.tsx  Skeletons.tsx  StateViews.tsx
frontend/src/pages/: TokenBuyers.tsx  TokenFeed.tsx
frontend/src/types/: index.ts
