[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solana Indexer Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
actix = "0.13"
actix-web = "4.9"
actix-web-actors = "4.3"
actix-rt = "2.10"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana
solana-client = "2.1"
solana-sdk = "2.1"
solana-transaction-status = "2.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
async-trait = "0.1"

# Metrics
prometheus = "0.13"

# Testing
proptest = "1.5"
mockall = "0.13"
